Add Jenkins and html files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <html>
      <head>
        <title>Static HTML Site</title>
+     </script>
      </head>
      <body>
        <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</strong>.</p>
